Ad top, menu accordion

--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -45,14 +45,76 @@
 
       <h2 class="font-semibold text-base tracking-wide font-ultra-expanded text-orange uppercase !mb-4 z-10 relative !mt-0">SECTIONS</h2>
       <ul class="space-y-3 z-10 relative">
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Politics & Power</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Education</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Community Issues</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Culture</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Sports</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Opinion</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Places</a></li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Collections & Guides</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Politics & Power <span class="material-symbols-sharp">add</span></a>
+          <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">Local Government</a></li>
+            <li><a href="#">State Government</a></li>
+            <li><a href="#">Voter Guide</a></li>
+          </ul>
+        </li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Education <span class="material-symbols-sharp">add</span></a>
+        <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">K-12 Schools</a></li>
+            <li><a href="#">Higher education</a></li>
+          </ul>
+        </li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Community Issues <span class="material-symbols-sharp">add</span></a>
+        <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">Criminal Justice</a></li>
+            <li><a href="#">Housing</a></li>
+            <li><a href="#">Real Estate</a></li>
+            <li><a href="#">Economy</a></li>
+            <li><a href="#">Health</a></li>
+            <li><a href="#">Climate & Environment</a></li>
+            <li><a href="#">Religion</a></li>
+          </ul>
+        </li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Culture <span class="material-symbols-sharp">add</span></a>
+        <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">Food & Drink</a></li>
+            <li><a href="#">Arts</a></li>
+            <li><a href="#">Music</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Film & TV</a></li>
+            <li><a href="#">Astrology</a></li>
+          </ul>
+        </li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide">
+            <a class="flex justify-between peer" href="#" onclick="return false;">Sports <span class="material-symbols-sharp">add</span></a>
+            <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+                <li><a href="#">Ravens</a></li>
+                <li><a href="#">Orioles</a></li>
+                <li><a href="#">The Adam Jones Podcast</a></li>
+                <li><a href="#">Higher Education</a></li>
+                <li><a href="#">Higher Education</a></li>
+            </ul>
+        </li>
+
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Opinion <span class="material-symbols-sharp">add</span></a>
+        <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">Columns</a></li>
+            <li><a href="#">Community Voices</a></li>
+            <li><a href="#">Creatives in Residence</a></li>
+          </ul>
+        </li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Places <span class="material-symbols-sharp">add</span></a>
+        <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">Baltimore City</a></li>
+            <li><a href="#">West Baltimore Neighborhoods</a></li>
+            <li><a href="#">East Baltimore Neighborhoods</a></li>
+            <li><a href="#">Baltimore County</a></li>
+            <li><a href="#">Howard County</a></li>
+            <li><a href="#">Anne Arundel County</a></li>
+            <li><a href="#">Regional</a></li>
+            <li><a href="#">Maryland</a></li>
+          </ul>
+        </li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Collections & Guides <span class="material-symbols-sharp">add</span></a>
+        <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
+            <li><a href="#">Baltimore Curated</a></li>
+            <li><a href="#">Better Baltimore</a></li>
+          </ul>
+        </li>
 
       </ul>
 
