--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -1,10 +1,10 @@
-<div class="bg-black text-white min-h-screen pt-2 pb-16 overflow-hidden">
+<div class="@container bg-black text-white min-h-screen pt-2 pb-16 overflow-hidden">
 
   <!-- Middle content for Desktop -->
-  <div class="md:flex justify-between p-4 md:px-12">
+  <div class="@5xl:flex justify-between p-4 @5xl:px-12">
 
     <!-- Top logo and social icons row (Desktop view) -->
-  <div class="md:flex md:flex-col justify-between md:justify-start items-center md:items-start mb-10 z-10 relative">
+  <div class="@5xl:flex @5xl:flex-col justify-between @5xl:justify-start items-center @5xl:items-start mb-10 z-10 relative">
     <h1 class="text-2xl font-bold mb-3 text-center w-full">
     <a class="inline-block" href="index.html"><img src="assets/images/logo-wordmark.svg" width="240"></a>
     </h1>
@@ -37,7 +37,7 @@
 
 
     <!-- Company Column -->
-    <div class="space-y-2 mb-8 relative z-10 pt-6 md:pt-4">
+    <div class="space-y-2 mb-8 relative z-10 pt-6 @5xl:pt-4">
 
       <div class="logo absolute opacity-10 pointer-events-none z-0 -left-1/4 top-1/3 sm:top-1/2 -translate-y-1/5 sm:hidden">
         <img class="w-screen -rotate-45 scale-150" src="assets/images/logo-character.svg" alt="">
@@ -109,7 +109,7 @@
             <li><a href="#">Maryland</a></li>
           </ul>
         </li>
-        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer" href="#" onclick="return false;">Collections & Guides <span class="material-symbols-sharp">add</span></a>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a class="flex justify-between peer gap-2" href="#" onclick="return false;">Collections & Guides <span class="material-symbols-sharp">add</span></a>
         <ul class="sub hidden peer-focus:block text-lg capitalize font-regular font-light pt-2 pb-4 space-y-1">
             <li><a href="#">Baltimore Curated</a></li>
             <li><a href="#">Better Baltimore</a></li>
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Contact Us Column -->
-    <div class="space-y-2 mb-8 border-t md:border-0 border-black-500 pt-6 md:pt-4 relative z-10">
+    <div class="space-y-2 mb-8 border-t @5xl:border-0 border-black-500 pt-6 @5xl:pt-4 relative z-10">
       <h2 class="font-semibold text-base tracking-wide font-ultra-expanded text-orange uppercase mb-4">CONTACT US</h2>
       <ul class="space-y-3">
         <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Customer Care</a></li>
@@ -136,7 +136,7 @@
     </div>
 
     <!-- Terms & Services Column -->
-    <div class="space-y-2 mb-8 border-t md:border-0 border-black-500 pt-6 md:pt-4 z-10 relative">
+    <div class="space-y-2 mb-8 border-t @5xl:border-0 border-black-500 pt-6 @5xl:pt-4 z-10 relative">
       <h2 class="font-semibold text-base tracking-wide font-ultra-expanded text-orange uppercase mb-4">The Banner</h2>
       <ul class="space-y-3">
         <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Our Impact</a></li>
@@ -154,7 +154,7 @@
   </div>
 
   <!-- Legal content row for Desktop -->
-  <div class="md:flex flex-col justify-between p-4 text-black-300 md:px-12">
+  <div class="@5xl:flex flex-col justify-between p-4 text-black-300 @5xl:px-12">
 
     <div class="social border-t border-black-500 pt-8 mb-8">
     <div class="flex">
