--- a/index.html
+++ b/index.html
@@ -371,5 +371,9 @@
     </main>
 
     <sergey-import src="footer" />
+
+    <div id="mobileMenu" class="menu w-full md:max-w-md fixed top-0 md:top-14 right-0 z-20 bottom-0 overflow-scroll translate-x-full transition-transform transform-gpu">
+  <sergey-import src="footer" />
+  </div>
   </body> 
 </html>
