ads, hats, menu
above header ad space
alert bars (live, breaking)
context eyebrow variations

--- a/_imports/ad-zone-topper.html
+++ b/_imports/ad-zone-topper.html
@@ -1,3 +1,4 @@
 <div class="block-ad-zone block-ad-zone-300-50 bg-black flex flex-col items-center py-2">
-	<img src="../assets/images/ad-300-50.png" class="max-w-fit" alt="">
+	<img src="../assets/images/ad-300-50.png" class="max-w-fit block lg:hidden" alt="">
+	<img src="https://placehold.co/728x90" class="max-w-fit hidden lg:block" alt="">
 </div>
