--- a/_imports/head-ad.html
+++ b/_imports/head-ad.html
@@ -15,7 +15,6 @@
   </sergey-slot>
 </head>
 
-<body class="lg:pt-14 overflow-x-hidden">
+<body class="overflow-x-hidden">
 
-  <sergey-import src="ad-zone-topper" />
-  <sergey-import src="header" />
+  <sergey-import src="header-ad" />
