--- a/article-topper-ad.html
+++ b/article-topper-ad.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-article-topper</sergey-template>
 
-    <div class="docs"></div>
+    <div class="docs">This layout still needs to account for the fixed sticky position on scroll...</div>
 
 </sergey-import>
