--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 <li class="mb-1"><a href="article-topper-feature.html">↳ Feature</a></li>
                 <li class="mb-1"><a href="article-topper-feature-black.html">↳ Feature, Black</a></li>
                 <li class="mb-1"><a href="article-topper-supported.html">↳ Supported</a></li>
+                <li class="mb-1"><a href="article-topper-ad.html">↳ Ad Zone</a></li>
 
               </ul>
             </li>
@@ -252,6 +253,30 @@
       </section>
 
       <div class="col">
+
+      <section class="mb-12">
+
+        <div class="flex items-center justify-between border-b border-black pb-2 mb-4 ">
+        <h2 class="uppercase text-sm font-condensed">Global</h2>
+        <div class="total pr-3 text-light-gray"></div>
+        </div>
+
+        <ul>
+
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold">Alerts</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+              </div>
+              <ul class="submenu hidden">
+                <li class="mb-1"><a href="alert-hat-live.html">↳ Live News</a></li>
+                <li class="mb-1"><a href="alert-hat-breaking.html">↳ Breaking</a></li>
+              </ul>
+            </li>
+
+        </ul>
+
+      </section>
 
       <section class="mb-12">
 
