--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <li class="mb-1"><a href="article-topper-no-lead-art-left.html">↳ No Art, Left</a></li>
                 <li class="mb-1"><a href="article-topper-feature.html">↳ Feature</a></li>
                 <li class="mb-1"><a href="article-topper-feature-black.html">↳ Feature, Black</a></li>
+                <li class="mb-1"><a href="article-topper-columnist.html">↳ Columnist</a></li>
                 <li class="mb-1"><a href="article-topper-supported.html">↳ Supported</a></li>
                 <li class="mb-1"><a href="article-topper-ad.html">↳ Ad Zone</a></li>
 
