--- a/_imports/article-topper-feature-black.html
+++ b/_imports/article-topper-feature-black.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper block-article-topper-feature-black mb-6">
+<div class="block-article-topper block-article-topper-feature-black  mb-6">
 
 <div class="lg:grid lg:grid-cols-5 items-center lg:h-screen lg:place-content-start">
 
@@ -6,7 +6,7 @@
 <sergey-import src="lead-art-feature" />
 </div>
 
-<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center lg:h-screen-bars lg:place-content-center bg-black py-6">
+<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center lg:h-screen-bars lg:place-content-center bg-black py-6 @container">
 
 <sergey-import src="article-topper-context-related" />
 
