--- a/_imports/article-topper-feature.html
+++ b/_imports/article-topper-feature.html
@@ -6,7 +6,7 @@
 <sergey-import src="lead-art-feature" />
 </div>
 
-<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center">
+<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center @container">
 
 <sergey-import src="article-topper-context-related" />
 
