--- a/_imports/article-topper-headline.html
+++ b/_imports/article-topper-headline.html
@@ -1,4 +1,4 @@
-<h1 class="block-article-topper-headline font-condensed font-black text-4xl max-w-3xl mx-auto px-4 tracking-tight [&:has(strong)]:text-5xl [&:has(strong)]:font-light">
+<h1 class="block-article-topper-headline font-condensed font-black text-4xl w-full max-w-3xl mx-auto px-4 tracking-tight [&:has(strong)]:text-5xl [&:has(strong)]:font-light">
 	<sergey-slot>
 	<strong class="font-black">We went shopping in a food desert</strong> where there is little access to healthy food. Here’s what we found.
 	</sergey-slot>
