--- a/_imports/attribution-date.html
+++ b/_imports/attribution-date.html
@@ -1,11 +1,11 @@
-<div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto w-full flex flex-col md:flex-row md:gap-2 md:items-baseline md:justify-center">
+<div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto w-full flex flex-col @2xl:flex-row @2xl:gap-2 @2xl:items-baseline @2xl:justify-center">
 	
 	<div class="attribution">
 		<a href="#" class="underline decoration-1 underline-offset-2">Christina Tkacik</a>
 	</div>
 
 	<time class="leading-none inline-block">
-		<span class="published">Published 3/16/22 10:20 p.m. EST</span><span class="hidden md:inline">,</span> <br class="md:hidden"><span class="updated">Updated 3/16/22 11:15 p.m. EST</span>
+		<span class="published">Published 3/16/22 10:20 p.m. EST</span><span class="hidden @2xl:inline">,</span> <br class="@2xl:hidden"><span class="updated">Updated 3/16/22 11:15 p.m. EST</span>
 	</time>
 
 </div>
