--- a/_imports/article-topper-left.html
+++ b/_imports/article-topper-left.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper block-article-topper-left mb-6">
+<div class="block-article-topper block-article-topper-left @container mb-6">
 
 <sergey-import src="article-topper-context" />
 
