--- a/_imports/article-topper-no-lead-art-left.html
+++ b/_imports/article-topper-no-lead-art-left.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper mb-6">
+<div class="block-article-topper @container mb-6">
 
 <sergey-import src="article-topper-context-live" />
 
