--- a/_imports/article-topper-supported.html
+++ b/_imports/article-topper-supported.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper block-article-topper-supported md:text-center mb-6">
+<div class="block-article-topper block-article-topper-supported @container md:text-center mb-6">
 
 <div class="supported-message border-b p-4 flex gap-6 md:gap-8 text-sm md:border-t items-center justify-center">
 	<p>This content is made possible by the generous support of <a href="#" class="underline">Lifebridge Health</a>. All editorial decisions remain the domain of our newsroom.</p>
