--- a/_imports/header.html
+++ b/_imports/header.html
@@ -56,7 +56,7 @@
 
         // Toggle classes on mobileMenu
         if (mobileMenu) {
-            mobileMenu.classList.toggle('translate-x-0');
+            mobileMenu.classList.toggle('!translate-x-0');
             mobileMenu.classList.toggle('open');
         }
 
