--- a/_imports/header-ad.html
+++ b/_imports/header-ad.html
@@ -58,7 +58,7 @@
 
         // Toggle classes on mobileMenu
         if (mobileMenu) {
-            mobileMenu.classList.toggle('translate-x-0');
+            mobileMenu.classList.toggle('!translate-x-0');
             mobileMenu.classList.toggle('open');
         }
 
