--- a/_imports/paywall-inline.html
+++ b/_imports/paywall-inline.html
@@ -1,6 +1,6 @@
 <div class="block-paywall-inline bg-white text-center relative pb-12 mb-8 font-black">
 
-	<div class="fade w-full h-24 bg-gradient-to-t from-white via-white absolute -translate-y-full"></div>
+	<div class="fade w-full h-24 bg-gradient-to-t from-white via-white absolute left-0 right-0 -translate-y-full"></div>
 
 	<p class="font-black font-ultra-expanded leading-none text-3xl mb-6">You’ve reached<br>your limit<br>of free articles.</p>
 
