--- a/_imports/template.html
+++ b/_imports/template.html
@@ -15,6 +15,8 @@
 
   </div>
 
+  <sergey-import src="section-footer" />
+
   <sergey-import src="footer" />
 
   <div id="mobileMenu" class="menu w-full md:max-w-md fixed top-0 md:top-14 right-0 z-10 bottom-0 overflow-scroll translate-x-full transition-transform transform-gpu">
