--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
             </ul>
           </li>
 
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="layout-article.html">Section Footer</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          </li>
+
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
             <div class="flex justify-between cursor-pointer toggleMenu">
               <a class="block mb-2 font-bold">Video</a>
