--- a/index.html
+++ b/index.html
@@ -243,6 +243,17 @@
           </li>
 
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold">Social Embed</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+              </div>
+              <ul class="submenu hidden">
+                <li class="mb-1"><a href="social-embed-tiktok.html">↳ Tiktok</a></li>
+                <li class="mb-1"><a href="social-embed-x.html">↳ X (Twitter)</a></li>
+              </ul>
+            </li>
+
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
             <div class="flex justify-between cursor-pointer toggleMenu">
               <a class="block mb-2 font-bold">Video</a>
               <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
