--- a/_imports/article-topper-context-related.html
+++ b/_imports/article-topper-context-related.html
@@ -5,8 +5,8 @@
 	<a class="section-front font-caslon px-4 pr-2 text-lg">
 		Food & Drink
 	</a>
-	<a href="#" class="inline-block slant-clip px-2 bg-purple text-white italic uppercase font-normal text-sm mr-2">Related</a>
-	<a href="#" class="section mr-2 hover:text-purple">Which area grocery store has the best prices <span class="text-purple arrows text-sm ml-0.5">↗</span></a>
+	<a href="#" class="inline-block slant-clip px-2 bg-purple text-white italic uppercase font-condensed font-bold text-base mr-1 tracking-wide">Related</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Which area grocery store has the best prices <span class="text-purple arrows text-sm ml-0.5">↗</span></a>
 
 	</div>
 
