--- a/_imports/article-topper-context.html
+++ b/_imports/article-topper-context.html
@@ -2,16 +2,16 @@
 
 	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
-	<a class="section-front uppercase font-bold text-orange font-ultra-condensed px-4 text-lg">
+	<a class="section-front uppercase font-black text-orange font-condensed px-4 pr-2 text-lg">
 		Howard County
 	</a>
-	<a href="#" class="section mr-2 hover:text-purple">K-12 Schools</a>
-	<a href="#" class="section mr-2 hover:text-purple">Events</a>
-	<a href="#" class="section mr-2 hover:text-purple">Latest</a>
-	<a href="#" class="section mr-2 hover:text-purple">Top Lists</a>
-	<a href="#" class="section mr-2 hover:text-purple">Restaurants</a>
-	<a href="#" class="section mr-2 hover:text-purple">Podcast</a>
-	<a href="#" class="section mr-2 hover:text-purple">Newsletter</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">K-12 Schools</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Events</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Latest</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Top Lists</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Restaurants</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Podcast</a>
+	<a href="#" class="section mr-2 hover:text-purple text-lg">Newsletter</a>
 
 	</div>
 
