--- a/_imports/article-topper-feature-black.html
+++ b/_imports/article-topper-feature-black.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper block-article-topper-feature-black  mb-6">
+<div class="block-article-topper block-article-topper-feature-black  mb-12">
 
 <div class="lg:grid lg:grid-cols-5 items-center lg:h-screen lg:place-content-start">
 
@@ -6,7 +6,7 @@
 <sergey-import src="lead-art-feature" />
 </div>
 
-<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center lg:h-screen-bars lg:place-content-center bg-black py-6 @container">
+<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center lg:h-screen-bars lg:place-content-center bg-black py-6 pt-2 @container">
 
 <sergey-import src="article-topper-context-related" />
 
@@ -20,11 +20,11 @@
 </div>
 
 <div class="block lg:hidden">
-<figcaption class="my-8 font-light text-black-500 leading-none text-sm block px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
+<figcaption class="my-8 font-normal font-condensed text-black-500 leading-tight text-base block px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
 </div>
 
 </div>
 
-<sergey-import src="article-subheadline">As a team, the Orioles have defied expectation and struck wonder in the hearts of fans this season. The grub at Camden Yards, not so much.</sergey-import>
+<sergey-import src="article-subheadline-light">As a team, the Orioles have defied expectation and struck wonder in the hearts of fans this season. The grub at Camden Yards, not so much.</sergey-import>
 
 </div>
