--- a/_imports/article-topper-no-lead-art-left.html
+++ b/_imports/article-topper-no-lead-art-left.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper @container mb-6">
+<div class="block-article-topper @container mb-12">
 
 <sergey-import src="article-topper-context-live" />
 
@@ -6,6 +6,6 @@
 
 <sergey-import src="attribution-date-left" />
 
-<sergey-import src="article-subheadline" />
+<sergey-import src="article-subheadline-light" />
 
 </div>
