--- a/_imports/article-topper-no-lead-art.html
+++ b/_imports/article-topper-no-lead-art.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper @container md:text-center mb-6">
+<div class="block-article-topper @container md:text-center mb-12">
 
 <sergey-import src="article-topper-context-live" />
 
@@ -9,6 +9,6 @@
 
 <sergey-import src="attribution-date" />
 
-<sergey-import src="article-subheadline" />
+<sergey-import src="article-subheadline-light" />
 
 </div>
