--- a/_imports/attribution-date-columnist.html
+++ b/_imports/attribution-date-columnist.html
@@ -3,7 +3,7 @@
 	<div class="flex-col @2xl:flex-row @2xl:order-1">
 
 	<div class="attribution @2xl:inline-block @2xl:pr-2">
-		<a href="#" class="underline decoration-1 underline-offset-2">Christina Tkacik</a>
+		<a href="#" class="underline decoration-1 underline-offset-2 font-medium">Christina Tkacik</a>
 	</div>
 
 	<time class="leading-none inline-block">
