--- a/_imports/blockquote-color.html
+++ b/_imports/blockquote-color.html
@@ -2,7 +2,7 @@
 
 <blockquote class="block bg-orange text-white p-6">
 	<p class="font-bold font-condensed text-4xl lg:text-5xl leading-tight tracking-tight">It was obviously an unreal feeling to be back up here.</p>
-	<cite class="not-italic text-base leading-tight font-normal text-black mt-4 block">
+	<cite class="not-italic text-base font-condensed leading-tight font-normal text-black mt-4 block">
 		<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
 		<p class="">Lawyer</p> 
 	</cite>
