--- a/_imports/blockquote-large.html
+++ b/_imports/blockquote-large.html
@@ -2,7 +2,7 @@
 
 	<blockquote class="block border-y py-6">
 		<p class="font-bold font-condensed text-3xl lg:text-4xl tracking-tight">It was obviously an unreal feeling to be back up here.</p>
-		<cite class="not-italic text-base leading-tight font-normal mt-4 block">
+		<cite class="not-italic text-base font-condensed leading-tight font-normal mt-4 block">
 			<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
 			<p class="text-black-500">Ravens right guard</p> 
 		</cite>
