--- a/_imports/charm.html
+++ b/_imports/charm.html
@@ -4,7 +4,7 @@
 
     <div class="charm-item snap-center snap-always h-10 leading-10 pl-6 text-right relative pl-4 bg-black lg:bg-white lg:text-black" id="subscribe">
         <div class="hidden lg:block"><a href="#" class=""><span class="absolute -translate-x-full pr-2 material-symbols-sharp mr-2 opacity-50 text-sm top-1/2 -translate-y-1/2">sports_baseball</span> Game @ 7pm</a></div>
-        <div class="block lg:hidden"><a href="#" class="underline decoration-[1.5px] underline-offset-2 decoration-orange font-medium">Get the App</a></div>
+        <div class="block lg:hidden"><a href="#" class="underline decoration-2 underline-offset-2 decoration-orange font-medium">Get the App</a></div>
     </div>
 
     <div class="charm-item snap-center snap-always h-10 leading-10 pl-6 text-right relative pl-4 bg-black lg:bg-white lg:text-black" id="time">
