--- a/_imports/offer-hat-large.html
+++ b/_imports/offer-hat-large.html
@@ -8,7 +8,7 @@
 
 	<div class="actions flex flex-col lg:flex-grow items-center lg:items-start gap-2 font-expanded">
 	<a href="#" class="bg-orange text-white font-black p-3 inline-block">Get The Banner for $1</a>
-	<a href="#" class="font-light text-sm flex"> <span class="pr-2">or</span> <span class="underline decoration-[1.5px] underline-offset-2 decoration-orange font-medium">Sign in</span></a>
+	<a href="#" class="font-light text-sm flex"> <span class="pr-2">or</span> <span class="underline decoration-2 underline-offset-2 decoration-orange font-medium">Sign in</span></a>
 	</div>
 
     </div>
