--- a/_imports/offer-hat-small.html
+++ b/_imports/offer-hat-small.html
@@ -1,11 +1,11 @@
 <div class="block-hat block-hat-offer block-hat-offer-small fixed flex flex-col lg:flex-row lg:items-center pr-8 lg:pr-14 w-full bg-black text-white bottom-14 lg:bottom-auto lg:top-14 left-0 right-0 p-4 translate-y-full lg:-translate-y-full transition-transform transform-gpu delay-2000 ease-in-out duration-500" data-replace="{ 'translate-y-full lg:-translate-y-full' : 'translate-y-0' }">
     
     <p class="font-black font-expanded text-xl sm:text-2xl">Get The Banner for only $1.</p>
-    <p class="font-light font-expanded text-black-200 mb-2 lg:mb-0 lg:ml-6">Six months. Newsletter. Mobile app.</p>
+    <p class="font-light font-expanded text-black-200 mb-4 lg:mb-0 lg:ml-6">Six months. Newsletter. Mobile app.</p>
 
-    <div class="actions flex lg:flex-grow lg:justify-end items-center gap-2 font-expanded">
-    <a href="#" class="bg-purple-700 text-white font-black p-3 inline-block lg:order-2">Get 6 months for $1</a>
-    <a href="#" class="font-light text-sm flex"> <span class="lg:order-2 px-2">or</span> <span class="underline decoration-[1.5px] underline-offset-2 decoration-orange font-medium">Sign in</span></a>
+    <div class="actions flex lg:flex-grow lg:justify-end items-center gap-1 font-expanded">
+    <a href="#" class="bg-purple-700 text-white font-black p-3 py-2 inline-block lg:order-2">Get 6 months for $1</a>
+    <a href="#" class="font-light text-sm flex"> <span class="lg:order-2 px-2">or</span> <span class="underline decoration-2 underline-offset-2 decoration-orange font-medium">Sign in</span></a>
     </div>
 
     <a href="#" class="close absolute top-0 right-0 p-2 lg:p-4 lg:mt-3">
