--- a/_imports/alert-hat-live.html
+++ b/_imports/alert-hat-live.html
@@ -2,7 +2,7 @@
     
     <div class="scroller overflow-x-scroll whitespace-nowrap pr-8 md:pr-0">
 
-    <a href="#" class="inline-block slant-clip px-2 bg-red text-white italic uppercase font-normal text-sm mr-2">LIVE</a>
+    <a href="#" class="inline-block slant-clip px-2 bg-red text-white italic uppercase font-bold text-base mr-1 tracking-wide">LIVE</a>
     <a href="#" class="section mr-2 pl-4 relative">
         <span class="absolute flex block h-2 w-2 top-1.5 left-0">
           <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red opacity-75"></span>
