--- a/_imports/article-subheadline.html
+++ b/_imports/article-subheadline.html
@@ -1,7 +1,7 @@
-<div class="article-lead max-w-3xl mx-auto">
+<div class="article-lead max-w-3xl mx-auto mt-12">
 
 <sergey-import src="divider" />
 
-<p class="px-4 font-bold text-3xl font-condensed leading-none"><sergey-slot>Nearly one in four Baltimore residents live in a food desert, Black residents are disproportionately affected.</sergey-slot></p>
+<p class="px-4 font-black text-3xl font-condensed leading-none"><sergey-slot>Nearly one in four Baltimore residents live in a food desert, Black residents are disproportionately affected.</sergey-slot></p>
 
 </div>
