--- a/_imports/article-topper-context-live.html
+++ b/_imports/article-topper-context-live.html
@@ -3,7 +3,7 @@
 	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
 	<a class="section-front font-mono px-4 pr-2 uppercase">Criminal Justice</a>
-	<a href="#" class="inline-block slant-clip px-2 bg-orange text-white italic uppercase font-normal text-sm mr-2">LIVE</a>
+	<a href="#" class="inline-block slant-clip px-2 bg-orange text-white italic uppercase font-bold text-base mr-1 tracking-wide">LIVE</a>
 	<a href="#" class="section mr-2 hover:text-purple pl-4 relative italic">
 		<span class="absolute flex block h-2 w-2 top-1.5 left-0">
 		  <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-orange opacity-75"></span>
