--- a/_imports/attribution-date-columnist-left.html
+++ b/_imports/attribution-date-columnist-left.html
@@ -3,7 +3,7 @@
 	<div class="flex-col md:flex-row md:order-1">
 
 	<div class="attribution md:inline-block md:pr-2">
-		<a href="#" class="underline decoration-1 underline-offset-2">Christina Tkacik</a>
+		<a href="#" class="underline decoration-1 underline-offset-2 font-medium">Christina Tkacik</a>
 	</div>
 
 	<time class="leading-none inline-block">
