--- a/_imports/attribution-date-left.html
+++ b/_imports/attribution-date-left.html
@@ -1,7 +1,7 @@
 <div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto w-full flex flex-col @2xl:gap-2 @2xl:flex-row @2xl:items-baseline @2xl:justify-left">
 	
 	<div class="attribution">
-		<a href="#" class="underline decoration-1 underline-offset-2">Christina Tkacik</a>
+		<a href="#" class="underline decoration-1 underline-offset-2 font-medium">Christina Tkacik</a>
 	</div>
 
 	<time class="leading-none inline-block">
