--- a/_imports/author-block.html
+++ b/_imports/author-block.html
@@ -1,10 +1,10 @@
-<div class="block-author bg-orange-100 gap-8 py-6 pt-10 px-4">
+<div class="block-author bg-orange-100 gap-8 py-4 pt-10 px-4">
 
   <div class="person flex relative items-center justify-between border-t-4 border-black mb-4">
 
     <div class="content max-w-[calc(100%-6rem)]">
-    <p class="name font-condensed font-black text-lg leading-tight">Kyle Goon</p>
-    <p class="leading-tight font-light text-sm text-black-500 truncate"><a href="#">kyle.goon.with.a.suuuuper.longer.than.normal.email.address.that.runs.off@thebaltimorebanner.org</a></p>
+    <p class="name font-condensed font-bold text-2xl leading-tight">Kyle Goon</p>
+    <p class="leading-tight font-light text-sm truncate"><a href="#">kyle.goon@thebaltimorebanner.org</a></p>
     </div>
 
     <div class="w-16 h-16 bg-orange">
@@ -14,7 +14,7 @@
   </div>
 
   <div class="bio mb-6">
-    <p class="leading-snug font-light">Kyle Goon joined the staff of The Baltimore Banner in April 2023 as a sports columnist. He previously covered the Los Angeles Lakers for the Orange County Register, including... <a href="#">More</a></p>
+    <p class="leading-snug font-normal">Kyle Goon joined the staff of The Baltimore Banner in April 2023 as a sports columnist. He previously covered the Los Angeles Lakers for the Orange County Register, including... <a href="#" class="underline underline-offset-2 font-medium">More</a></p>
   </div>
 
   <div class="links flex gap-1 mb-6">
@@ -37,15 +37,15 @@
 
   <div class="more border-t border-tinted-gray-300 pt-6">
 
-    <h3 class="uppercase font-condensed mb-4">More from Kyle Goon</h3>
+    <h3 class="uppercase font-condensed font-medium mb-4">More from Kyle Goon</h3>
 
     <div class="lg:flex">
-    <div class="article mb-4 lg:w-1/2">
+    <div class="article mb-6 lg:w-1/2">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Undercooked appetizer’: Zay Flowers shines,</strong> but recievers frustrated with performance in Texans win</a></h4>
     <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
 
-    <div class="article mb-4 lg:w-1/2">
+    <div class="article mb-6 lg:w-1/2">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Kyle Goon: J.K. Dobbins did what he could</strong> for a new deal this offseason. His injury cruelly illustrates why.</a></h4>
     <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
