--- a/_imports/media-item-wide.html
+++ b/_imports/media-item-wide.html
@@ -1,4 +1,4 @@
-<figure class="block-media-item block-media-item-wide block-media-item-image !max-w-5xl !px-0 mx-auto">
+<figure class="block-media-item block-media-item-wide block-media-item-image !my-8 !max-w-5xl !px-0 mx-auto">
 	<img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/QZ5PSNP6FJDGFIJNDKCQJDPUKE.JPG">
-	<figcaption class="font-light text-black-500 leading-none text-sm block mt-2 px-4 max-w-3xl mx-auto">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</figcaption>
+	<figcaption class="font-normal font-condensed text-black-500 leading-tight text-base block mt-2 px-4 max-w-3xl mx-auto">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</figcaption>
 </figure>
