--- a/_imports/media-item.html
+++ b/_imports/media-item.html
@@ -1,4 +1,4 @@
-<figure class="block-media-item block-media-item-image max-w-3xl mx-auto">
+<figure class="block-media-item block-media-item-image max-w-3xl mx-auto !my-8">
 	<img src='<sergey-slot name="url">https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/QZ5PSNP6FJDGFIJNDKCQJDPUKE.JPG</sergey-slot>'>
-	<figcaption class="font-light text-black-500 leading-none text-sm block mt-2"><sergey-slot name="caption">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</sergey-slot></figcaption>
+	<figcaption class="font-normal font-condensed text-black-500 leading-tight text-base block mt-2"><sergey-slot name="caption">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</sergey-slot></figcaption>
 </figure>
