--- a/_imports/paywall-hat-large.html
+++ b/_imports/paywall-hat-large.html
@@ -5,10 +5,10 @@
     <div class="content bg-white lg:w-1/2 flex flex-col gap-4 lg:pt-6">
     <p class="font-black font-expanded text-3xl md:text-4xl 2xl:text-5xl">You’ve reached <br>your limit<br>of free articles.</p>
 
-    <div class="actions flex flex-col lg:flex-grow items-center lg:items-start gap-2 font-expanded">
-    <a href="#" class="bg-orange text-white font-black p-3 inline-block">Get The Banner for $1</a>
-    <p class="font-expanded font-light text-sm pt-2">Are you a subscriber?
-        <span class="font-light flex gap-2"><a href="#" class="underline decoration-[1.5px] underline-offset-2 decoration-orange font-medium">Get the app</a> or <a href="#" class="underline decoration-[1.5px] underline-offset-2 decoration-orange font-medium">Sign in</a></span>
+    <div class="actions flex flex-col lg:flex-grow items-center lg:items-start gap-2">
+    <a href="#" class="button inline-block bg-orange text-white text-lg sm:text-xl font-black font-ultra-expanded px-4 py-3 leading-none mb-2">Get The Banner for $1</a>
+    <p class="leading-tight font-normal">Are you a subscriber?<br>
+    <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Sign In</a> or <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Switch to the App</a>
     </p>
     </div>
 
