--- a/_imports/pullquote-culture-color-strip.html
+++ b/_imports/pullquote-culture-color-strip.html
@@ -5,7 +5,7 @@
 		<div class="strip w-full h-0.5 bg-gradient mb-6">&nbsp;</div>
 
 		<p class="font-caslon text-2xl lg:text-3xl tracking-tight">Their cocktails are handcrafted masterpieces, ranging from savory stunners to sweet sippers.</p>
-		<cite class="not-italic text-base leading-tight font-normal mt-4 block">
+		<cite class="not-italic font-condensed text-base leading-tight font-normal mt-4 block">
 			<p class="text-black-500 font-light">CookHouse Restaurant</p> 
 		</cite>
 
