--- a/_imports/pullquote-culture.html
+++ b/_imports/pullquote-culture.html
@@ -1,8 +1,8 @@
 <div class="block-pullquote block-pullquote-culture py-4">
 
-	<blockquote class="block border-y py-6">
+	<blockquote class="block border-y border-orange py-6">
 		<p class="font-caslon text-2xl lg:text-3xl tracking-tight">Their cocktails are handcrafted masterpieces, ranging from savory stunners to sweet sippers.</p>
-		<cite class="not-italic text-base leading-tight font-normal mt-4 block">
+		<cite class="not-italic text-base font-condensed leading-tight font-normal mt-4 block">
 			<p class="text-black-500 font-light">CookHouse Restaurant</p> 
 		</cite>
 	</blockquote>
