--- a/_imports/pullquote-sports-black.html
+++ b/_imports/pullquote-sports-black.html
@@ -1,14 +1,17 @@
 <div class="block-pullquote block-pullquote-sports-black py-6">
 
-	<blockquote class="bg-black relative text-white p-8 text-4xl uppercase tracking-tight italic font-black font-expanded">
+	<blockquote class="bg-black relative text-white p-8 text-4xl uppercase tracking-normal italic font-black font-ultra-condensed">
 		<div class="slant absolute block bg-[#FF4019] w-8 h-2/3 top-0 left-0 -z-10 rotate-3 origin-top-left">&nbsp;</div>
 
 		<p>It was obviously an unreal feeling to be back up here.</p>
-		<cite class="empty:hidden not-italic text-base leading-tight font-normal mt-4 block">
-		</cite>
 
 		<div class="slant absolute block bg-purple-700 w-8 h-2/3 bottom-0 right-0 -z-10 rotate-3 origin-bottom-right">&nbsp;</div>
 
 	</blockquote>
+
+	<cite class="empty:hidden px-8 not-italic font-condensed text-base leading-tight font-normal mt-4 block">
+			<p class="text-lg tracking-tight uppercase font-bold"><strong>Kevin Zeitler </strong></p>
+			<p class="text-black-500">Tight End</p> 
+		</cite>
 
 </div>
