--- a/_imports/pullquote-sports.html
+++ b/_imports/pullquote-sports.html
@@ -1,12 +1,12 @@
-<div class="block-pullquote block-pullquote-sports py-6">
+<div class="block-pullquote block-pullquote-sports py-6 ">
 
 	<hr class="h-1.5 bg-orange top-clip border-0">
 
 	<div class="flex">
 
 	<blockquote class="relative p-8 pb-4 pl-0">
-		<p class="text-4xl uppercase tracking-tight italic font-black font-expanded">It was obviously an unreal feeling to be back up here.</p>
-		<cite class="empty:hidden not-italic text-base leading-tight font-normal mt-4 block">
+		<p class="text-5xl uppercase tracking-tight font-black font-ultra-condensed">It was obviously an unreal feeling to be back up here.</p>
+		<cite class="empty:hidden not-italic font-condensed text-base leading-tight font-normal mt-4 block">
 			<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
 			<p class="text-black-500">Lawyer</p> 
 		</cite>
