--- a/_imports/video.html
+++ b/_imports/video.html
@@ -18,7 +18,7 @@
 
     <!-- Duration -->
 
-    <div class="absolute bottom-2 left-2 font-mono text-white bg-black py-2 px-3 leading-none">
+    <div class="absolute bottom-2 left-2 font-mono text-white bg-black py-2 px-3 leading-none rounded">
         1:24
     </div>
 
