more screen tuning

--- a/_imports/ad-zone-970-250.html
+++ b/_imports/ad-zone-970-250.html
@@ -1,4 +1,4 @@
-<div class="block-ad-zone block-ad-zone-970-250 bg-light flex flex-col items-center py-4 shadow-inner !my-12">
+<div class="block-ad-zone block-ad-zone-970-250 bg-black-100 flex flex-col items-center py-4 shadow-inner !my-12">
 	<img src="https://placehold.co/970x250" class="max-w-fit" alt="">
 	<p class="font-light text-xs pt-2">The Baltimore Banner thanks its sponsors. <a href="#" class="underline decoration-1 font-normal">Become one.</a></p>
 </div>
