--- a/_imports/article-topper-supported.html
+++ b/_imports/article-topper-supported.html
@@ -1,8 +1,10 @@
 <div class="block-article-topper block-article-topper-supported @container md:text-center mb-12">
 
-<div class="supported-message border-b p-4 flex gap-6 md:gap-8 text-sm md:border-t items-center justify-center">
+<div class="supported-message border-b p-4 text-sm text-left md:border-t leading-tight">
+	<div class="max-w-3xl mx-auto flex gap-6 md:gap-8 items-top md:items-center md:px-4 justify-center">
 	<p>This content is made possible by the generous support of <a href="#" class="underline">Lifebridge Health</a>. All editorial decisions remain the domain of our newsroom.</p>
-	<img src="assets/images/logo-sponsor.png" class="w-16 h-16 md:w-12 md:h-12" alt="">
+	<img src="assets/images/logo-sponsor.png" class="w-12 h-12" alt="">
+	</div>
 </div>
 
 <sergey-import src="article-topper-context" />
