--- a/_imports/offer-hat-large.html
+++ b/_imports/offer-hat-large.html
@@ -1,14 +1,25 @@
-<div class="block-hat block-hat-offer block-hat-offer-large fixed flex flex-col lg:flex-row lg:items-center gap-6 pr-8 w-full lg:w-3/4 bg-white text-black bottom-14 lg:bottom-1/2 text-center lg:text-left left-0 lg:left-1/2 right-0 lg:right-auto p-4 lg:p-0 translate-y-full lg:translate-y-[100vh] lg:-translate-x-1/2 transition-transform transform-gpu delay-2000 ease-in-out duration-500  lg:border-black lg:border-3 lg:drop-shadow-hard z-10" data-replace="{ 'translate-y-full lg:translate-y-[100vh]' : 'translate-y-0 lg:translate-y-1/2' }">
+<div class="block-hat block-hat-offer block-hat-offer-large fixed flex flex-col lg:flex-row lg:items-end gap-6 pr-8 w-full lg:w-3/4 bg-white text-black bottom-14 lg:bottom-1/2 text-center lg:text-left left-0 lg:left-1/2 right-0 lg:right-auto p-4 lg:p-0 translate-y-full lg:translate-y-[110vh] lg:-translate-x-1/2 transition-transform transform-gpu delay-2000 ease-in-out duration-500  lg:border-black lg:border-3 lg:drop-shadow-hard z-30" data-replace="{ 'translate-y-full lg:translate-y-[110vh]' : 'translate-y-0 lg:translate-y-1/2' }">
 
     <img class="pt-6 max-w-full lg:w-1/2" src="assets/images/art-offer-hat.png" width="767" height="563" alt="">
 	
     <div class="content bg-white lg:w-1/2 flex flex-col gap-4 lg:pt-6">
-	<p class="font-black font-expanded text-3xl md:text-4xl 2xl:text-5xl">Get The <br class="hidden xl:block" />Banner <br class="xl:hidden" />for only $1.</p>
-	<p class="font-light font-expanded text-black lg:text-xl mb-2 lg:mb-0">Six months. Newsletter. Mobile app.</p>
+	<p class="font-black font-expanded text-3xl md:text-4xl 2xl:text-5xl text-left border-b pb-4 md:mr-4">Get The <br class="hidden xl:block" />Banner <br class="xl:hidden" />for only $1.</p>
+
+    <p class="font-black font-expanded tracking-tight text-xl text-left">Your subscription includes:</p>
+
+    <ul class="text-left space-y-2 mb-4 md:mb-0">
+        <li class="flex items-center gap-2 text-lg"><span class="material-symbols-sharp text-orange">full_coverage</span> Unlimited local news</li>
+        <li class="flex items-center gap-2 text-lg"><span class="material-symbols-sharp text-orange">mark_email_read</span> Unlimited newsletters</li>
+        <li class="flex items-center gap-2 text-lg"><span class="material-symbols-sharp text-orange">person_add</span> 1 free guest subscription</li>
+    </ul>
 
 	<div class="actions flex flex-col lg:flex-grow items-center lg:items-start gap-2 font-expanded">
-	<a href="#" class="bg-orange text-white font-black p-3 inline-block">Get The Banner for $1</a>
-	<a href="#" class="font-light text-sm flex"> <span class="pr-2">or</span> <span class="underline decoration-2 underline-offset-2 decoration-orange font-medium">Sign in</span></a>
+	<a href="#" class="bg-orange text-white font-black p-3 w-full md:w-auto block">Get The Banner for $1</a>
+	
+    <p class="leading-tight font-normal font-regular my-2 md:mb-6">Are you a subscriber?<br>
+    <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Sign In</a> or <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Switch to the App</a>
+    </p>
+
 	</div>
 
     </div>
