--- a/_imports/offer-hat-small.html
+++ b/_imports/offer-hat-small.html
@@ -5,7 +5,7 @@
 
     <div class="actions flex lg:flex-grow lg:justify-end items-center gap-1 font-expanded">
     <a href="#" class="bg-purple-700 text-white font-black p-3 py-2 inline-block lg:order-2">Get 6 months for $1</a>
-    <a href="#" class="font-light text-sm flex"> <span class="lg:order-2 px-2">or</span> <span class="underline decoration-2 underline-offset-2 decoration-orange font-medium">Sign in</span></a>
+    <a href="#" class="font-light text-sm flex font-regular"> <span class="lg:order-2 px-2">or</span> <span class="underline decoration-2 underline-offset-2 decoration-orange font-medium">Sign in</span></a>
     </div>
 
     <a href="#" class="close absolute top-0 right-0 p-2 lg:p-4 lg:mt-3">
