--- a/_imports/paywall-hat-large.html
+++ b/_imports/paywall-hat-large.html
@@ -3,10 +3,10 @@
     <img class="pt-6 max-w-full lg:w-1/2" src="assets/images/art-paywall-hat.png" width="767" height="563" alt="">
     
     <div class="content bg-white lg:w-1/2 flex flex-col gap-4 lg:pt-6">
-    <p class="font-black font-expanded text-3xl md:text-4xl 2xl:text-5xl">You’ve reached <br>your limit<br>of free articles.</p>
+    <p class="font-black font-ultra-expanded leading-tight tracking-tight text-3xl md:text-4xl 2xl:text-5xl">You’ve reached <br>your limit<br>of free articles.</p>
 
     <div class="actions flex flex-col lg:flex-grow items-center lg:items-start gap-2">
-    <a href="#" class="button inline-block bg-orange text-white text-lg sm:text-xl font-black font-ultra-expanded px-4 py-3 leading-none mb-2">Get The Banner for $1</a>
+    <a href="#" class="button inline-block bg-orange text-white text-lg sm:text-xl font-black font-ultra-expanded px-4 py-3 leading-none mb-2">Get 6 Months for $1</a>
     <p class="leading-tight font-normal">Are you a subscriber?<br>
     <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Sign In</a> or <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Switch to the App</a>
     </p>
