--- a/_imports/paywall-inline.html
+++ b/_imports/paywall-inline.html
@@ -2,7 +2,7 @@
 
 	<div class="fade w-full h-24 bg-gradient-to-t from-white via-white absolute left-0 right-0 -translate-y-full"></div>
 
-	<p class="font-black font-ultra-expanded leading-tight tracking-tight text-3xl mb-6">You’ve reached<br>your limit<br>of free articles.</p>
+	<p class="font-black font-ultra-expanded leading-tight tracking-tight text-3xl mb-6">You’ve reached<br class="md:hidden"> your limit <br>of free articles.</p>
 
 	<a class="button inline-block bg-orange text-white text-lg sm:text-xl font-black font-ultra-expanded px-4 py-3 leading-none mb-6">Get 6 months for $1</a>
 
