--- a/_imports/philanthropy-inline-callout.html
+++ b/_imports/philanthropy-inline-callout.html
@@ -1,6 +1,6 @@
-<div class="block-philanthropy-inline-callout !max-w-3xl mx-auto !px-0 lg:!px-4 !my-8 bg-tinted-gray-100 text-purple-900">
+<div class="block-philanthropy-inline-callout !max-w-3xl mx-auto !px-0 lg:!px-4 !my-8">
 
-	<div class="bg-yellow border-t-3 lg:border border-purple-900">
+	<div class="bg-tinted-gray-100 text-purple-900 border-t-3 lg:border border-purple-900">
 	<div class="heading flex gap-4 items-center border-b border-purple-900">
 		<div class="logo w-14 h-14 flex items-center justify-center border-r border-purple-900">
 			<img src="assets/images/logo-character-black.svg" width="22">
