--- a/_imports/template-ad.html
+++ b/_imports/template-ad.html
@@ -8,10 +8,10 @@
 
     
     <h4 class="mb-2">Source Code</h4>
-  <textarea class="w-full h-96 border border-light-gray p-6 text-black-500-700 bg-light text-black-500 rounded-lg mb-16"><sergey-slot name="source" /></textarea>
+  <textarea class="w-full h-96 border border-light-gray p-6 text-black-500-700 text-black-500 rounded-lg mb-16"><sergey-slot name="source" /></textarea>
 
   <h4 class="mb-2">Selector</h4>
-  <input class="w-full border border-light-gray p-6 text-black-500-700 bg-light text-black-500 rounded-lg mb-16" type="" name="" value='<sergey-slot name="selector">n/a</sergey-slot>'>
+  <input class="w-full border border-light-gray p-6 text-black-500-700 text-black-500 rounded-lg mb-16" type="" name="" value='<sergey-slot name="selector">n/a</sergey-slot>'>
 
   </div>
 
