author block stories

--- a/_imports/author-block.html
+++ b/_imports/author-block.html
@@ -41,12 +41,12 @@
 
     <div class="lg:flex">
     <div class="article mb-6 lg:w-1/2">
-    <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Undercooked appetizer’: Zay Flowers shines,</strong> but recievers frustrated with performance in Texans win</a></h4>
+    <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong class="font-bold">‘Undercooked appetizer’: Zay Flowers shines,</strong> but recievers frustrated with performance in Texans win</a></h4>
     <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
 
     <div class="article mb-6 lg:w-1/2">
-    <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Kyle Goon: J.K. Dobbins did what he could</strong> for a new deal this offseason. His injury cruelly illustrates why.</a></h4>
+    <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong class="font-bold">‘Kyle Goon: J.K. Dobbins did what he could</strong> for a new deal this offseason. His injury cruelly illustrates why.</a></h4>
     <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
     </div>
