--- a/_imports/paywall-inline.html
+++ b/_imports/paywall-inline.html
@@ -6,7 +6,7 @@
 
 	<a class="button inline-block bg-orange text-white text-lg sm:text-xl font-black font-ultra-expanded px-4 py-3 leading-none mb-6">Get 6 months for $1</a>
 
-	<p class="leading-tight font-normal">Are you a subscriber?<br>
+	<p class="leading-tight font-normal border-b pb-12">Are you a subscriber?<br>
 	<a href="#" class="underline decoration-orange underline-offset-2 font-medium">Sign In</a> or <a href="#" class="underline decoration-orange underline-offset-2 font-medium">Switch to the App</a>
 	</p>
 
